# otus-cpp-2022-2023

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
ext/: pch.h
task01/: CMakeLists.txt  lib.h  main.cpp
task02/: CMakeLists.txt  Structures.cpp  Structures.h  main.cpp
task03/: CCustomAllocator.h  CLinkedList.h  CLinkedVector.h  CList.cpp  CList.h  CMakeLists.txt  Utils.h  main  main.cpp
task04/: main.cpp
